# game-of-life

./: README.md  game_of_life.py  pyproject.toml
tests/: test_game_of_life.py
